src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ws-terpel-eds
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: ws-terpel-eds
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      routerName: router
      wildcardPolicy: None
